# s3-deploy

./: .gitignore  Cargo.toml  README.md
src/: main.rs
