[package]
name = "s3-deploy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.5.2"
aws-sdk-s3 = "0.5.2"
clap = { version = "3.0.12", features = ["derive"] }
mime = "0.3.16"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }